# jt-consoleutils

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  check.sh  rustfmt.toml  scaffold.sh
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: scaffold_project.rs  spinner.rs  test_shell.rs
plans/: colorize-impl-plan.md  colorize-plan.md  public-plan.md  to-move-here.md
scripts/: prepare-release.sh  publish-release.sh  release.sh
src/: build_support.rs  colorize.rs  colors.rs  dotenv.rs  envvars.rs  fs_utils.rs  help.rs  kinds.rs  lib.rs  output.rs  paths.rs  signals.rs  str_utils.rs  terminal.rs  version.rs  vocab.rs
src/cli/: help.rs  helpers.rs  mod.rs  parse.rs  parse_tests.rs  types.rs  version.rs
src/fs_utils/: dry.rs  mod.rs
src/json/: deserialize.rs  edit.rs  error.rs  escape.rs  map.rs  mod.rs  ops.rs  parser.rs  scan.rs  serialize.rs  to_json.rs  value.rs
src/json/edit/: tests.rs
src/json/parser/: tests.rs
src/json/scan/: tests.rs
src/json/serialize/: tests.rs
src/output/: action.rs  console.rs  file_stats.rs  mod.rs  mode.rs  progress.rs  render.rs  string.rs  trace.rs
src/shell/: dry.rs  exec.rs  helpers.rs  line_queue.rs  mock.rs  mod.rs  overlay.rs  process.rs  scripted.rs
src/signals/: interrupt.rs  mod.rs  parent.rs
src/terminal/: colorize.rs  colors.rs  mod.rs  overlay.rs  width.rs
