[package]
name = "jt-consoleutils"
version = "0.5.0"
edition = "2024"
description = "Scaffolding and helpers for CLI tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasontaylor137/jt-consoleutils"
homepage = "https://github.com/jasontaylor137/jt-consoleutils"
readme = "README.md"
authors = ["Jason Taylor <jasont137@gmail.com>"]
keywords = ["cli", "terminal", "console", "shell"]
categories = ["command-line-interface", "command-line-utilities"]

[features]
build-support = []
verbose = []
trace = []
dotenv = ["dep:dotenvy"]
file-stats = []

[dependencies]
dotenvy = { version = "0.15", optional = true }
pico-args = "0.5"
terminal_size = "0.4"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[dev-dependencies]
rstest = "0.26"
tempfile = "3"
